syntax = "proto3";

option go_package = "github.com/vercel/turborepo/cli/internal/server";

package server;

service Turbo {
  rpc Hello (HelloRequest) returns (HelloResponse);
  rpc Shutdown (ShutdownRequest) returns (ShutdownResponse);
  // Implement cache watching
  rpc NotifyOutputsWritten (NotifyOutputsWrittenRequest) returns (NotifyOutputsWrittenResponse);
  rpc GetChangedOutputs (GetChangedOutputsRequest) returns (GetChangedOutputsResponse);
}

message HelloRequest {
  string version = 1;
  string session_id = 2;
}

message HelloResponse {}

message ShutdownRequest {}

message ShutdownResponse {}

message NotifyOutputsWrittenRequest {
  repeated string output_globs = 1;
  string hash = 2;
}

message NotifyOutputsWrittenResponse {}

message GetChangedOutputsRequest {
  repeated string output_globs = 1;
  string hash = 2;
}

message GetChangedOutputsResponse {
  repeated string changed_output_globs = 1;
}
